syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting {
    string first_name = 1;
    string second_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string response = 1;
}

service GreetService{
    //  Unary API
    rpc Greet (GreetRequest) returns (GreetResponse) {};
}